--- a/pywattnode.conf
+++ b/pywattnode.conf
@@ -7,6 +7,7 @@ name: energy
 user: energy
 pass: monitor
 replicate: False
+dbtype: kinesis
 
 ;[remotedb]
 ;host: http://thor.mines.edu:5984/
@@ -23,12 +24,11 @@ port: ttyUSB
 count: 1
 period_sec: 5
 
-
 [wattnode1]
 address: 1
 regs: 1001,1009,1011,1013,1017,1019,1021,1033,1101,1103,1125,1127,1133,1135,1141,1143,1147,1149,1151,1155,1159,1163,1165
-ctamps: 100
-#ctamps: 15
+#ctamps: 100
+ctamps: 15
 averaging: 1
 phase: 0
 ctdirections: 0
