--- a/pywattnode.conf
+++ b/pywattnode.conf
@@ -1,13 +1,16 @@
 [db] 
 ;host: 138.67.20.235
 ;host:127.0.0.1
-host: http://localhost:5984/
-dbname: wattnodev2
-name: energy
-user: energy
-pass: monitor
-replicate: False
-dbtype: kinesis
+;host: http://localhost:5984/
+;dbname: wattnodev2
+;name: energy
+;user: energy
+;pass: monitor
+;replicate: False
+dbtype: plotwatt
+house_id: 11672
+api_key: MDM0OTAyMzEwZTM0
+batchsize: 15
 
 ;[remotedb]
 ;host: http://thor.mines.edu:5984/
@@ -22,13 +25,14 @@ dbtype: kinesis
 [wattnode]
 port: ttyUSB
 count: 1
-period_sec: 5
+period_sec: 1
 
 [wattnode1]
 address: 1
 regs: 1001,1009,1011,1013,1017,1019,1021,1033,1101,1103,1125,1127,1133,1135,1141,1143,1147,1149,1151,1155,1159,1163,1165
 #ctamps: 100
-ctamps: 15
+#ctamps: 15
+ctamps: 200
 averaging: 1
 phase: 0
 ctdirections: 0
