modification for opentsdb proxy

--- a/pywattnode.conf
+++ b/pywattnode.conf
@@ -9,7 +9,8 @@
 ;replicate: False
 
 dbtype: opentsdb
-url: amm-csr2
+;url: amm-csr2
+url = http://eg.bucknell.edu/~amm042/proxy/api
 localdb: wattnode.db
 
 ;plotwatt
