add mqtt client

--- a/pywattnode.conf
+++ b/pywattnode.conf
@@ -13,6 +13,10 @@ dbtype: opentsdb
 url = http://eg.bucknell.edu/~amm042/proxy/api
 localdb: wattnode.db
 
+[mqtt]
+; also send realtime stats to mqtt
+broker: mqtt.bucknell.edu
+
 ;plotwatt
 ;dbtype: plotwatt
 ;house_id: 11672
